# prompt-security-utils

./: FUTURE_WORK.md  LICENSE  README.md  pyproject.toml
docs/: INTEGRATION_CHECKLIST.md  SECURITY_GUIDE.md
docs/plans/: 2026-03-07-secure-usage-design.md  2026-03-07-secure-usage-plan.md
src/mcp_security/: __init__.py  detection.py  output.py  screening.py  wrapping.py
src/prompt_security/: __init__.py  cache.py  cli.py  config.py  detection.py  output.py  screening.py  semantic.py  wrapping.py
src/prompt_security/patterns/: injection_patterns.json
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_detection.py  test_output.py  test_screening.py  test_semantic.py  test_wrapping.py
