[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-utils"
version = "0.1.0"
description = "Prompt injection protection for MCP skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marios Andreopoulos", email = "opensource@andmarios.com" }
]
keywords = ["mcp", "security", "prompt-injection", "llm"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_security"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
