[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-security-utils"
version = "0.1.0"
description = "Prompt injection protection for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marios Andreopoulos", email = "opensource@andmarios.com" }
]
keywords = ["prompt", "security", "prompt-injection", "llm", "ai-safety"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_security"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
