[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-security-utils"
version = "1.0.0"
description = "Prompt injection protection for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marios Andreopoulos", email = "opensource@andmarios.com" }
]
keywords = ["prompt", "security", "prompt-injection", "llm", "ai-safety"]
dependencies = [
    "httpx>=0.27.0",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/andmarios/prompt-security-utils"
Repository = "https://github.com/andmarios/prompt-security-utils"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_security"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
